--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "email": "gtsopour@gmail.com",
   "private": false,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "nodemon ./bin/www",
     "dev": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
@@ -19,9 +20,12 @@
     "fs": "^0.0.1-security",
     "hbs": "^4.0.3",
     "method-override": "^3.0.0",
+    "moment": "^2.29.1",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
