--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
