forgopass and reset

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "fs": "^0.0.1-security",
+    "generate-password": "^1.7.0",
     "hbs": "^4.0.3",
     "method-override": "^3.0.0",
     "moment": "^2.29.1",
