--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
+    "bootstrap": "^5.1.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ejs": "^3.1.6",
