--- a/package.json
+++ b/package.json
@@ -28,11 +28,9 @@
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
+    "nodemon": "^2.0.15",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
   }
 }
