--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "three": "^0.139.2"
   }
 }
