--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "private": false,
   "scripts": {
     "start": "nodemon ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "jest"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -34,6 +35,7 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "jest": "^27.5.1",
     "three": "^0.139.2"
   }
 }
